[project]
name = "classifinder"
version = "0.1.6"
description = "Python SDK for the ClassiFinder secret detection API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
http2 = ["httpx[http2]>=0.27.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "httpx[http2]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/classifinder"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "TCH",  # type-checking imports
]

[tool.ruff.lint.per-file-ignores]
"src/classifinder/integrations/langchain.py" = ["A002"]  # `input` param required by Runnable interface

[tool.ruff.lint.isort]
known-first-party = ["classifinder", "conftest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
